{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 127,
  "lineage": "985f0442-7577-4a7f-e837-33e3dde5e5e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:security-group/sg-002ef608d4673f600",
            "description": "Allow Oracle 1521 from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002ef608d4673f600",
            "ingress": [
              {
                "cidr_blocks": [
                  "173.72.7.40/32"
                ],
                "description": "Oracle from my IP",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1521
              }
            ],
            "name": "hama-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Env": "dev",
              "Project": "hama"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0b5f64ba6a067c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "sg-002ef608d4673f600",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:network-acl/acl-0491bf3ff9c95603d",
            "default_network_acl_id": "acl-0491bf3ff9c95603d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0491bf3ff9c95603d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "021891613818",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-01d8bcaf4023caa3d",
              "subnet-0faee152f9bb98d2b"
            ],
            "tags": {
              "Name": "hama-dev-vpc-default"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hama-dev-vpc-default",
              "Project": "hama"
            },
            "vpc_id": "vpc-0b0b5f64ba6a067c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:route-table/rtb-0ba4e9c05ec1123d4",
            "default_route_table_id": "rtb-0ba4e9c05ec1123d4",
            "id": "rtb-0ba4e9c05ec1123d4",
            "owner_id": "021891613818",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "hama-dev-vpc-default"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hama-dev-vpc-default",
              "Project": "hama"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b0b5f64ba6a067c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:security-group/sg-0c30e1b2ff544f6c4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c30e1b2ff544f6c4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hama-dev-vpc-default"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hama-dev-vpc-default",
              "Project": "hama"
            },
            "vpc_id": "vpc-0b0b5f64ba6a067c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:internet-gateway/igw-07b228336cec6ec45",
            "id": "igw-07b228336cec6ec45",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "tags": {
              "Name": "hama-dev-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hama-dev-vpc",
              "Project": "hama"
            },
            "vpc_id": "vpc-0b0b5f64ba6a067c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07b228336cec6ec45",
            "id": "r-rtb-0767c5f45622fdb511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0767c5f45622fdb51",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0767c5f45622fdb51"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:route-table/rtb-0767c5f45622fdb51",
            "id": "rtb-0767c5f45622fdb51",
            "owner_id": "021891613818",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "hama-dev-vpc-public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hama-dev-vpc-public",
              "Project": "hama"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0b5f64ba6a067c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "rtb-0767c5f45622fdb51",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010baf3db1e07b096",
            "region": "us-east-1",
            "route_table_id": "rtb-0767c5f45622fdb51",
            "subnet_id": "subnet-01d8bcaf4023caa3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066b84981766eddb5",
            "region": "us-east-1",
            "route_table_id": "rtb-0767c5f45622fdb51",
            "subnet_id": "subnet-0faee152f9bb98d2b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:subnet/subnet-01d8bcaf4023caa3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d8bcaf4023caa3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891613818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hama-dev-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hama-dev-vpc-public-us-east-1a",
              "Project": "hama"
            },
            "vpc_id": "vpc-0b0b5f64ba6a067c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "subnet-01d8bcaf4023caa3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:subnet/subnet-0faee152f9bb98d2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0faee152f9bb98d2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891613818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hama-dev-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hama-dev-vpc-public-us-east-1b",
              "Project": "hama"
            },
            "vpc_id": "vpc-0b0b5f64ba6a067c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "subnet-0faee152f9bb98d2b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:vpc/vpc-0b0b5f64ba6a067c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0491bf3ff9c95603d",
            "default_route_table_id": "rtb-0ba4e9c05ec1123d4",
            "default_security_group_id": "sg-0c30e1b2ff544f6c4",
            "dhcp_options_id": "dopt-0a77257800e2de64d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b0b5f64ba6a067c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba4e9c05ec1123d4",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "tags": {
              "Name": "hama-dev-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hama-dev-vpc",
              "Project": "hama"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "vpc-0b0b5f64ba6a067c8",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}